--- a/frontend/jquery/studentsList.html
+++ b/frontend/jquery/studentsList.html
@@ -5,69 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Students List
-
-    </title>
+    <title>Students List</title>
+    <link rel="stylesheet" href="css/studentList.css">
 </head>
 
 <body>
-    <nav>
+    <nav class="main-nav">
         <header>
             Módulo Acadêmico
         </header>
-        <ul>
-            <li><a href="#">Alunos</a></li>
+        <ul class="nav-links">
+            <a class="nav-item" href=" # ">
+                <li>Alunos</li>
+            </a>
         </ul>
     </nav>
-    <section>
-        <header>
+    <section class="container">
+        <header class="main-header">
             Consulta de Alunos
         </header>
         <div class="content-page">
-            <form action="">
-                <input type="text" name="searchInput" id="searchInput">
-                <button>Pesquisar</button>
-            </form>
-            <button>Cadastrar Aluno</button>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Registro Acadêmico</th>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>AÇÕES</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1939</td>
-                        <td>Usuario Um</td>
-                        <td>000.000.000-00</td>
-                        <td>
-                            <a href="#">Editar</a>
-                            <a href="#">Excluir</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1940</td>
-                        <td>Usuario Dois</td>
-                        <td>333.444.888-67</td>
-                        <td>
-                            <a href="#">Editar</a>
-                            <a href="#">Excluir</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1941</td>
-                        <td>Usuario Tres</td>
-                        <td>223.423.112-43</td>
-                        <td>
-                            <a href="#">Editar</a>
-                            <a href="#">Excluir</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="padding-left-right-20">
+                <div class="top-actions">
+                    <form class="form-search" action="">
+                        <input type="text" name="searchInput" id="searchInput">
+                        <button>Pesquisar</button>
+                    </form>
+                    <button>Cadastrar Aluno</button>
+                </div>
+                <table class="table-list">
+                    <thead>
+                        <tr>
+                            <th>Registro Acadêmico</th>
+                            <th>Nome</th>
+                            <th>CPF</th>
+                            <th>AÇÕES</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1939</td>
+                            <td>Usuario Um</td>
+                            <td>000.000.000-00</td>
+                            <td>
+                                <a href="#">Editar</a>
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1940</td>
+                            <td>Usuario Dois</td>
+                            <td>333.444.888-67</td>
+                            <td>
+                                <a href="#">Editar</a>
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1941</td>
+                            <td>Usuario Tres</td>
+                            <td>223.423.112-43</td>
+                            <td>
+                                <a href="#">Editar</a>
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
 </body>
