--- a/frontend/jquery/studentsList.html
+++ b/frontend/jquery/studentsList.html
@@ -34,7 +34,7 @@
                     </form>
                     <button>Cadastrar Aluno</button>
                 </div>
-                <table class="table-list">
+                <table id="studentsList" class="table-list">
                     <thead>
                         <tr>
                             <th>Registro Acadêmico</th>
@@ -44,38 +44,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1939</td>
-                            <td>Usuario Um</td>
-                            <td>000.000.000-00</td>
-                            <td>
-                                <a href="#">Editar</a>
-                                <a href="#">Excluir</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>1940</td>
-                            <td>Usuario Dois</td>
-                            <td>333.444.888-67</td>
-                            <td>
-                                <a href="#">Editar</a>
-                                <a href="#">Excluir</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>1941</td>
-                            <td>Usuario Tres</td>
-                            <td>223.423.112-43</td>
-                            <td>
-                                <a href="#">Editar</a>
-                                <a href="#">Excluir</a>
-                            </td>
-                        </tr>
+
                     </tbody>
                 </table>
             </div>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="js/studentsList.js"></script>
 </body>
 
 </html>
