10 - Adicionando endpoint para excluir estudante e implementado na UI para excluir estudante

--- a/frontend/jquery/studentManager.html
+++ b/frontend/jquery/studentManager.html
@@ -16,7 +16,7 @@
             Módulo Acadêmico
         </header>
         <ul class="nav-links">
-            <a class="nav-item" href=" # ">
+            <a class="nav-item" href="studentsList.html">
                 <li>Alunos</li>
             </a>
         </ul>
@@ -26,7 +26,7 @@
             Consulta de Alunos
         </header>
         <div class="content-page padding-left-right-20">
-            <form class="form" action="">
+            <form id="studentForm" class="form" action="">
                 <div class="form-group">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name">
@@ -50,6 +50,8 @@
             </form>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="js/studentManager.js"></script>
 </body>
 
 </html>
