--- a/frontend/jquery/studentsList.html
+++ b/frontend/jquery/studentsList.html
@@ -16,7 +16,7 @@
             Módulo Acadêmico
         </header>
         <ul class="nav-links">
-            <a class="nav-item" href=" # ">
+            <a class="nav-item" href="#">
                 <li>Alunos</li>
             </a>
         </ul>
@@ -25,7 +25,8 @@
         <header class="main-header">
             Consulta de Alunos
         </header>
-        <div class="content-page">
+        <div class="loader"></div>
+        <div class="content-page display-none">
             <div class="padding-left-right-20">
                 <div class="top-actions">
                     <form class="form-search" action="">
