Adicionado endpoint para excluir usuário, implementado excluir usuário na UI

--- a/frontend/jquery/studentsList.html
+++ b/frontend/jquery/studentsList.html
@@ -33,7 +33,7 @@
                         <input type="text" name="searchInput" id="searchInput">
                         <button>Pesquisar</button>
                     </form>
-                    <button>Cadastrar Aluno</button>
+                    <a class="btn btn-dark" href="studentManager.html">Cadastrar Aluno</a>
                 </div>
                 <table id="studentsList" class="table-list">
                     <thead>
