--- a/frontend/jquery/studentManager.html
+++ b/frontend/jquery/studentManager.html
@@ -26,7 +26,7 @@
             Consulta de Alunos
         </header>
         <div class="content-page padding-left-right-20">
-            <form id="studentForm" class="form" action="">
+            <form id="studentForm" class="form" action="" method="post">
                 <div class="form-group">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name">
