Adicionado endpoint para cadastrar estudante, implementado recurso na UI para cadastrar estudante

--- a/frontend/jquery/studentManager.html
+++ b/frontend/jquery/studentManager.html
@@ -44,7 +44,7 @@
                     <input type="number" name="cpf" id="cpf">
                 </div>
                 <div class="actions">
-                    <button class="btn margin-right-10">Cancelar</button>
+                    <a href="studentsList.html" class="btn btn-warning margin-right-10">Cancelar</a>
                     <button class="btn">Salvar</button>
                 </div>
             </form>
