Atualizando endpoint para permitir buscar por query e implementado

--- a/frontend/jquery/studentsList.html
+++ b/frontend/jquery/studentsList.html
@@ -29,7 +29,7 @@
         <div class="content-page display-none">
             <div class="padding-left-right-20">
                 <div class="top-actions">
-                    <form class="form-search" action="">
+                    <form id="formSearchStudent" class="form-search">
                         <input type="text" name="searchInput" id="searchInput">
                         <button>Pesquisar</button>
                     </form>
